hanged Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file”

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    Helo World web tesss
+    <div>
+        <img src="Images/Mariada.jpg" alt="profil image"/>
+        <h2>komang Mariada</h2>
+    </div>
 </body>
 </html>
