Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <img src="Images/Mariada.jpg" alt="profil image"/>
+    <div id="profile-container">
+        <img src="Images/Mariada.jpg" alt="profile-name"/>
         <h2>komang Mariada</h2>
     </div>
 </body>
