--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="header">Header</div>
     <div id="profile-container">
         <img src="Images/Mariada.jpg" alt="profile-name"/>
         <h2>komang Mariada</h2>
