--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <img src="Images/Mariada.jpg" alt="profile-name"/>
         <h2>komang Mariada</h2>
     </div>
+    <div id="footer">Footer</div>
 </body>
 </html>
